--- a/english_typing/MenuPage.xaml
+++ b/english_typing/MenuPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="english_typing.HomePage"
+﻿<Page x:Class="english_typing.MenuPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,19 +8,17 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
        Background="#FFD5DFDB"
-      Title="Home">
+      Title="Menu">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition />
-            <RowDefinition Height="25"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="English Typing - Home" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"/>
-        <Button Click="Go_title" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3">タイトル</Button>
-        <Button Click="Go_title" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">設定</Button>
+        <TextBlock Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"><Run Text="English Typing - "/><Run Text="Menu"/></TextBlock>
+        <Button Click="Button_Click" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">タイトル</Button>
         <Grid Grid.Row="1" Margin="76,20,76,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"/>
@@ -29,9 +27,10 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="0">単語</Button>
-            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1">短文</Button>
-            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">文章</Button>
+            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="0">a</Button>
+            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1">b</Button>
+            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">c</Button>
+            <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3">d</Button>
         </Grid>
     </Grid>
 </Page>
