--- a/english_typing/TitlePage.xaml
+++ b/english_typing/TitlePage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
        Background="#FFD5DFDB"
-      Title="Page2">
+      Title="Title">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -16,7 +16,7 @@
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
         <TextBlock Text="English Typing" FontSize="80" TextAlignment="Center"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP"/>
-        <Button Click="Button_Click" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" Content="ホーム"/>
+        <Button Click="Go_title" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" Content="ホーム"/>
         <ProgressBar x:Name="ProgressBar" Minimum="0" Maximum="10" Value="{Binding Progress}" Grid.Row="2" Foreground="#FFBFBFBF" Background="White" BorderBrush="White"/>
     </Grid>
 </Page>
