--- a/english_typing/SettingPage.xaml
+++ b/english_typing/SettingPage.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="english_typing.MenuPage"
+﻿<Page x:Class="english_typing.SettingPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:english_typing"
-      xmlns:properties="clr-namespace:english_typing.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-       Background="#FFD5DFDB"
-      Title="Menu">
+      Background="#FFD5DFDB"
+      Title="Setting">
+
 
     <Grid>
         <Grid.RowDefinitions>
@@ -17,8 +17,8 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"><Run Text="English Typing - "/><Run Text="Menu"/></TextBlock>
-        <Button Click="Button_Click" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">タイトル</Button>
+        <TextBlock Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"><Run Text="English Typing - "/><Run Text="Setting"/></TextBlock>
+        <Button Click="Go_home" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">ホーム</Button>
         <Grid Grid.Row="1" Margin="76,20,76,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"/>
