--- a/english_typing/PlayPage.xaml
+++ b/english_typing/PlayPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:english_typing"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="800"
       Background="#FFD5DFDB"
       Title="Play">
 
@@ -13,11 +13,156 @@
         <Button x:Name="keyarea" KeyDown="OnKeyDownHandler" Loaded="keyarea_load" Width="0" Height="0" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="129*"/>
+                <RowDefinition Height="50*"/>
                 <RowDefinition Height="55"/>
-                <RowDefinition Height="266*"/>
+                <RowDefinition Height="50*"/>
+                <RowDefinition Height="230"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="1" FontSize="30"  TextWrapping="Wrap" Text="Text" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" FontSize="30"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Run Text="ab"/><Run Text="cd"/>
+            </TextBlock>
+            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" Height="210" Padding="10,10,10,10" Margin="10,10,10,10" Grid.Row="3" VerticalAlignment="Center" Width="630" Grid.RowSpan="3" CornerRadius="10" Background="#FFB0ABA4">
+                <Grid  Height="200" Width="600">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="40"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Height="40">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Row="0" Grid.Column="1" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="半/全" x:Name="khf"/>
+                        <Button Grid.Row="0" Grid.Column="2" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="!&#10;1" x:Name="k1"/>
+                        <Button Grid.Row="0" Grid.Column="3" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="&quot;&#10;2" x:Name="k2"/>
+                        <Button Grid.Row="0" Grid.Column="4" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="#&#10;3" x:Name="k3"/>
+                        <Button Grid.Row="0" Grid.Column="5" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="$&#10;4" x:Name="k4"/>
+                        <Button Grid.Row="0" Grid.Column="6" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="%&#10;5" x:Name="k5"/>
+                        <Button Grid.Row="0" Grid.Column="7" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="&amp;&#10;6" x:Name="k6"/>
+                        <Button Grid.Row="0" Grid.Column="8" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="'&#10;7" x:Name="k7"/>
+                        <Button Grid.Row="0" Grid.Column="9" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="(&#10;8" x:Name="k8"/>
+                        <Button Grid.Row="0" Grid.Column="10" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content=")&#10;9" x:Name="k9"/>
+                        <Button Grid.Row="0" Grid.Column="11" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="&#10;0" x:Name="k0"/>
+                        <Button Grid.Row="0" Grid.Column="12" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="=&#10;-" x:Name="kme"/>
+                        <Button Grid.Row="0" Grid.Column="13" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="~&#10;^" x:Name="kct"/>
+                        <Button Grid.Row="0" Grid.Column="14" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="|&#10;\" x:Name="kev"/>
+                        <Button Grid.Row="0" Grid.Column="15" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="←" x:Name="kbs"/>
+                    </Grid>
+                    <Grid Grid.Row="1" Height="40">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="60"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="80"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Row="0" Grid.Column="1" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="半/全" x:Name="ktab"/>
+                        <Button Grid.Row="0" Grid.Column="2" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="!&#10;1" x:Name="kq"/>
+                        <Button Grid.Row="0" Grid.Column="3" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="&quot;&#10;2" x:Name="kw"/>
+                        <Button Grid.Row="0" Grid.Column="4" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="#&#10;3" x:Name="ke"/>
+                        <Button Grid.Row="0" Grid.Column="5" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="$&#10;4" x:Name="kr"/>
+                        <Button Grid.Row="0" Grid.Column="6" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="%&#10;5" x:Name="kt"/>
+                        <Button Grid.Row="0" Grid.Column="7" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="&amp;&#10;6" x:Name="ky"/>
+                        <Button Grid.Row="0" Grid.Column="8" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="'&#10;7" x:Name="ku"/>
+                        <Button Grid.Row="0" Grid.Column="9" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="(&#10;8" x:Name="ki"/>
+                        <Button Grid.Row="0" Grid.Column="10" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content=")&#10;9" x:Name="ko"/>
+                        <Button Grid.Row="0" Grid.Column="11" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="&#10;0" x:Name="kp"/>
+                        <Button Grid.Row="0" Grid.Column="12" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="=&#10;-" x:Name="kat"/>
+                        <Button Grid.Row="0" Grid.Column="13" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="~&#10;^" x:Name="ksbs"/>
+                        <Button Grid.Row="0" Grid.Column="14" Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" Style="{StaticResource KeyBoardKey}" Content="|&#10;\" x:Name="ksbe"/>
+                    </Grid>
+                    <Grid Grid.Row="2" Height="40">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="80"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="60"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="76" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="Tab" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="Q" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="3" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="W" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="E" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="5" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="R" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="6" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="T" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="7" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="Y" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="8" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="U" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="9" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="I" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="10" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="O" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="11" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="P" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="12" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="`&#10;@" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                        <Border BorderBrush="#7F000000" BorderThickness="1" Grid.Row="0" Grid.Column="13" VerticalAlignment="Center" Height="36" Background="#FFDCD1D1" CornerRadius="5" Margin="2,2,0,2" HorizontalAlignment="Left" Width="36" >
+                            <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Margin="0,0,0,0" TextWrapping="Wrap" Text="{}{&#10;[" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="13"/>
+                        </Border>
+                    </Grid>
+                    <Grid Grid.Row="3"/>
+                    <Grid Grid.Row="4"/>
+                </Grid>
+            </Border>
         </Grid>
     </Grid>
 </Page>
