--- a/english_typing/App.xaml
+++ b/english_typing/App.xaml
@@ -11,7 +11,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border CornerRadius="5" BorderThickness="1" BorderBrush="#7F000000" Height="36" Width="36">
+                        <Border Background="#FFDCD1D1" CornerRadius="5" BorderThickness="1" BorderBrush="#7F000000" Height="36" Width="36">
                             <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="10">
                                 <ContentPresenter/>
                             </TextBlock>
