--- a/typing/HomePage.xaml
+++ b/typing/HomePage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="english_typing.HomePage"
+﻿<Page x:Class="typing.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:english_typing"
-      xmlns:properties="clr-namespace:english_typing.Properties"
+      xmlns:local="clr-namespace:typing"
+      xmlns:properties="clr-namespace:typing.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
        Background="#FFD5DFDB"
@@ -18,7 +18,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="English Typing - Home" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"/>
+        <TextBlock Text="Typing - Home" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"/>
         <Button Click="Go_title" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3">タイトル</Button>
         <Button Click="Go_setting" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">設定</Button>
         <Grid Grid.Row="1" Margin="76,20,76,0">
