--- a/typing/PlayPage.xaml
+++ b/typing/PlayPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="english_typing.PlayPage"
+﻿<Page x:Class="typing.PlayPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:english_typing"
+      xmlns:local="clr-namespace:typing"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
       Background="#FFD5DFDB"
