--- a/typing/TitlePage.xaml
+++ b/typing/TitlePage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="english_typing.TitlePage"
+﻿<Page x:Class="typing.TitlePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:english_typing"
-      xmlns:properties="clr-namespace:english_typing.Properties"
+      xmlns:local="clr-namespace:typing"
+      xmlns:properties="clr-namespace:typing.Properties"
     mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
        Background="#FFD5DFDB"
@@ -22,7 +22,7 @@
                 <RowDefinition Height="120"/>
                 <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="English Typing" FontSize="80" TextAlignment="Center" Grid.Row="0"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="120"/>
+            <TextBlock Text="Typing" FontSize="80" TextAlignment="Center" Grid.Row="0"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="120"/>
             <TextBlock x:Name="versiondata" FontSize="20" TextAlignment="Center"  Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="40"/>
         </Grid>
     </Grid>
