--- a/typing/PlayPage.xaml
+++ b/typing/PlayPage.xaml
@@ -66,6 +66,7 @@
                         <RowDefinition Height="40"/>
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
+                    <Button Grid.Row="0"  Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" x:Name="kinput"/>
                     <Grid Grid.Row="1" Height="40">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -407,17 +408,17 @@
                         </Border>
                         <Border x:Name="kpgt_b" Grid.Row="0" Grid.Column="10" CornerRadius="5" BorderThickness="1" BorderBrush="#7F000000" Height="36" Width="36" Background="#FFDCD1D1">
                             <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="10">
-                                <Button Click="Keyboardkey_Click" Background="#00000000" KeyDown="OnKeyDownHandler" Content="&gt;&#10;," x:Name="kpgt" BorderBrush="#00707070"/>
+                                <Button Click="Keyboardkey_Click" Background="#00000000" KeyDown="OnKeyDownHandler" Content="&gt;&#10;." x:Name="kpgt" BorderBrush="#00707070"/>
                             </TextBlock>
                         </Border>
                         <Border x:Name="ksqs_b" Grid.Row="0" Grid.Column="11" CornerRadius="5" BorderThickness="1" BorderBrush="#7F000000" Height="36" Width="36" Background="#FFDCD1D1">
                             <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="10">
-                                <Button Click="Keyboardkey_Click" Background="#00000000" KeyDown="OnKeyDownHandler" Content="+&#10;;" x:Name="ksqs" BorderBrush="#00707070"/>
+                                <Button Click="Keyboardkey_Click" Background="#00000000" KeyDown="OnKeyDownHandler" Content="?&#10;/" x:Name="ksqs" BorderBrush="#00707070"/>
                             </TextBlock>
                         </Border>
                         <Border x:Name="kby_b" Grid.Row="0" Grid.Column="12" CornerRadius="5" BorderThickness="1" BorderBrush="#7F000000" Height="36" Width="36" Background="#FFDCD1D1">
                             <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="10">
-                                <Button Click="Keyboardkey_Click" Background="#00000000" KeyDown="OnKeyDownHandler" Content="*&#10;:" x:Name="kby" BorderBrush="#00707070"/>
+                                <Button Click="Keyboardkey_Click" Background="#00000000" KeyDown="OnKeyDownHandler" Content="&#10;\" x:Name="kby" BorderBrush="#00707070"/>
                             </TextBlock>
                         </Border>
                         <Border x:Name="ksrhift_b" Grid.Row="0" Grid.Column="13" CornerRadius="5" BorderThickness="1" BorderBrush="#7F000000" Height="36" Width="66" Background="#FFDCD1D1">
