--- a/typing/PlayPage.xaml
+++ b/typing/PlayPage.xaml
@@ -30,17 +30,19 @@
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="1" Text="00:00:00" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="28"/>
                 <ProgressBar Grid.Row="2" Width="500" Height="20"></ProgressBar>
-                <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="4" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="Qarea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="4" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Run Text="スペースを押してスタート"/>
                 </TextBlock>
-                <TextBlock FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="5" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="Aarea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="5" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
                     
                 </TextBlock>
             </Grid>
 
             <StatusBar Grid.Row="4">
                 <TextBlock Text="問"/>
-                <TextBlock Text="1/30"/>
+                <TextBlock x:Name="QAnowcnt" Text="-"/>
+                <TextBlock Text="/"/>
+                <TextBlock x:Name="QAallcnt" Text="-"/>
                 <ProgressBar Height="10" Width="100"/>
                 <Separator/>
                 <TextBlock Text="タイプ"/>
@@ -51,8 +53,11 @@
                 <TextBlock Text="0/0"/>
                 <Separator/>
                 <TextBlock Text="問題"/>
-                <TextBlock Text="xxx"/>
-                <TextBlock Text="xxx.txt"/>
+                <TextBlock Text="file:"/>
+                <TextBlock x:Name="QAfilename" Text="----"/>
+                <TextBlock Text=";"/>
+                <TextBlock Text="line:"/>
+                <TextBlock x:Name="QAlinecnt" Text="--"/>
             </StatusBar>
 
 
@@ -66,7 +71,7 @@
                         <RowDefinition Height="40"/>
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
-                    <Button Grid.Row="0"  Click="Keyboardkey_Click" KeyDown="OnKeyDownHandler" x:Name="kinput"/>
+                    <Button Grid.Row="0" IsEnabled="true" PreviewKeyDown="OnKeyDownHandler" x:Name="kinput"/>
                     <Grid Grid.Row="1" Height="40">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
