--- a/typing/PlayPage.xaml
+++ b/typing/PlayPage.xaml
@@ -28,8 +28,8 @@
                     <RowDefinition Height="55"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="1" Text="00:00:00" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="28"/>
-                <ProgressBar Grid.Row="2" Width="500" Height="20"></ProgressBar>
+                <TextBlock x:Name="Qstopwatch" Grid.Row="1" Text="00:00:00" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="28"/>
+                <ProgressBar x:Name="Aprogress" Grid.Row="2" Width="500" Height="20"></ProgressBar>
                 <TextBlock x:Name="Qarea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="4" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Run Text="スペースを押してスタート"/>
                 </TextBlock>
@@ -43,10 +43,10 @@
                 <TextBlock x:Name="QAnowcnt" Text="-"/>
                 <TextBlock Text="/"/>
                 <TextBlock x:Name="QAallcnt" Text="-"/>
-                <ProgressBar Height="10" Width="100"/>
+                <ProgressBar x:Name="Qprogress" Height="10" Width="100"/>
                 <Separator/>
                 <TextBlock Text="タイプ"/>
-                <TextBlock Text="0"/>
+                <TextBlock x:Name="Qtypespeed" Text="0"/>
                 <TextBlock Text="/s"/>
                 <Separator/>
                 <TextBlock Text="ミスタイプ"/>
@@ -63,7 +63,7 @@
             </StatusBar>
 
 
-            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" Height="220" Padding="10,10,10,10" Grid.Row="3" VerticalAlignment="Center" Width="630" CornerRadius="10" Background="#FFB0ABA4">
+            <Border x:Name="KeyboardUI" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" Height="220" Padding="10,10,10,10" Grid.Row="3" VerticalAlignment="Center" Width="630" CornerRadius="10" Background="#FFB0ABA4">
                 <Grid  Height="200" Width="600" Loaded="keyarea_load">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0"/>
