--- a/typing/HomePage.xaml
+++ b/typing/HomePage.xaml
@@ -21,17 +21,11 @@
         <TextBlock Text="Typing - Home" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"/>
         <Button Click="Go_title" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3">タイトル</Button>
         <Button Click="Go_setting" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">設定</Button>
-        <Grid Grid.Row="1" Margin="76,20,76,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Button Name="a" Click="Go_play" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="0">a</Button>
-            <Button Name="b" Click="Go_play" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1">b</Button>
-            <Button Name="c" Click="Go_play" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">c</Button>
+        <Grid Grid.Row="1" Margin="76,20,76,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
         </Grid>
     </Grid>
 </Page>
