--- a/typing/HomePage.xaml
+++ b/typing/HomePage.xaml
@@ -32,8 +32,10 @@
                     <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="2" Content="参照⇗" Click="Button_Click" FontSize="12"/>
+                <Button Grid.Column="3" Content="OK" Click="menu_update" FontSize="12" Height="20" VerticalAlignment="Top"/>
                 <TextBox Grid.Column="1" x:Name="serchdir"/>
                 <TextBlock Grid.Column="0" Text="問題のあるフォルダを選択"/>
             </Grid>
