--- a/typing/TitlePage.xaml
+++ b/typing/TitlePage.xaml
@@ -5,10 +5,18 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:typing"
       xmlns:properties="clr-namespace:typing.Properties"
-    mc:Ignorable="d" 
+      mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
-       Background="#FFD5DFDB"
-      Title="Title">
+      Title="Title"
+      Background="{DynamicResource cBackground}">
+    <Page.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="colorthemes/default.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Page.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -22,8 +30,8 @@
                 <RowDefinition Height="120"/>
                 <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Typing" FontSize="80" TextAlignment="Center" Grid.Row="0"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="120"/>
-            <TextBlock x:Name="versiondata" FontSize="20" TextAlignment="Center"  Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="40"/>
+            <TextBlock Text="Typing" FontSize="80" TextAlignment="Center" Grid.Row="0"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="120" Foreground="{DynamicResource cFontcolor}"/>
+            <TextBlock x:Name="versiondata" FontSize="20" TextAlignment="Center"  Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="40" Foreground="{DynamicResource cFontcolor}"/>
         </Grid>
     </Grid>
 </Page>
