--- a/typing/colorthemes/dark.xaml
+++ b/typing/colorthemes/dark.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:typing">
-    <Brush x:Key="cBackground">#FFD5DFDB</Brush>
-    <Brush x:Key="cFontcolor">#FF000000</Brush>
+    <Brush x:Key="cBackground">#ff05DFDB</Brush>
+    <Brush x:Key="cForeground">#FFF00000</Brush>
 </ResourceDictionary>
