--- a/typing/ResultPage.xaml
+++ b/typing/ResultPage.xaml
@@ -1,13 +1,12 @@
-﻿<Page x:Class="typing.TitlePage"
+﻿<Page x:Class="typing.ResultPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:typing"
-      xmlns:properties="clr-namespace:typing.Properties"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
-      Title="Title"
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="ResultPage"
       Background="{DynamicResource cBackground}">
     <Page.Resources>
         <ResourceDictionary>
@@ -16,7 +15,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -30,8 +29,7 @@
                 <RowDefinition Height="120"/>
                 <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Typing" FontSize="80" TextAlignment="Center" Grid.Row="0"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="120" Foreground="{DynamicResource cFontcolor}"/>
-            <TextBlock x:Name="versiondata" FontSize="20" TextAlignment="Center"  Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="40" Foreground="{DynamicResource cFontcolor}"/>
+            <TextBlock Text="Finished" FontSize="60" TextAlignment="Center" Grid.Row="0"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="120" Foreground="{DynamicResource cFontcolor}"/>
         </Grid>
     </Grid>
 </Page>
